--- a/views/About.ejs
+++ b/views/About.ejs
@@ -35,10 +35,9 @@
 
 		<div id="contact" class="tab col-9" style="display: none;">
 				<div class="col-10 offset-1 wrapper">
-					<div class="section-heading">
-						<h2>Contact</h2>
+					
+						<h1 class="single-title text-center">Contact</h1>
 						<hr class="hr-pwinty mt-3" />
-					</div>
 					<form class="col-10 offset-1 mt-4" id="contact" method="POST" onsubmit="submitContact(event)" action="/api/contact/">
 						<div class="row">
 							<div class="col-6">
