--- a/views/Account.ejs
+++ b/views/Account.ejs
@@ -82,9 +82,7 @@
 			<div class="container p-0 m-0 h-100">
 				<div class="col-10 offset-1 wrapper lostpw-container">
 					<div class="box-lostpw">
-						<div class="section-heading">
-							<h2>Password Recovery</h2>
-						</div>
+						<h1 class="single-title text-center">Password Recovery</h1>
 						<div id="alert" class="alert alert-info alert-static" role="alert">
 							We'll send you a mail with instructions to reset your password
 						</div>
