--- a/views/User.ejs
+++ b/views/User.ejs
@@ -22,9 +22,7 @@
 
 		<div id="parameters" class="tab col-9 row" style="display: none;">
 				<div class="col-10 offset-1 wrapper">
-				<div class="section-heading">
-					<h2>Account</h2>
-				</div>
+					<h1 class="single-title text-center">Account</h1>
 				<div id="alert" class="alert alert-warning alert-static w-100 mb-3" role="alert">
 					Remember to keep these informations private
 				</div>
@@ -70,9 +68,7 @@
 		</div>
 		<div id="delivery" class="tab col-9 row">
 			<div class="col-10 offset-1 wrapper">
-				<div class="section-heading">
-					<h2>Delivery</h2>
-				</div>
+					<h1 class="single-title text-center">Delivery</h1>
 				<hr />
 				<form id="deliveryform" method="POST" action="/api/user/patch/delivery-info">
 					<div class="row">
