--- a/views/single/Galerie-single.ejs
+++ b/views/single/Galerie-single.ejs
@@ -92,7 +92,7 @@
         </div>
 
         <div style="height: 200px">
-          <div id="purchasebox" style="display: none;">
+          <div id="purchasebox" class="col-6 offset-3" style="display: none;">
             <span id="price" style="color: white;"></span>
             <input type="submit" class="logbtn" value="Add to cart" onclick="Pwinty.cartAdd('<%= locals.gallery._id %>', this)">
           </div>
